plugins {
    id 'dev.architectury.loom' version '1.9-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
    id "io.github.pacifistmc.forgix" version "1.2.9"
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version

    forgix {
        group = rootProject.group
        mergedJarName = rootProject.archives_name + '-' + rootProject.mod_version + '.jar'
    }
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {
        // Add repositories to retrieve artifacts from in here.
        // You should only use this when depending on other mods because
        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
        // for more information about repositories.
        maven { url = "https://maven.parchmentmc.org" } // Parchment mappings
        maven {
            url = "https://api.modrinth.com/maven"
            name = "Modrinth"
        }
        maven {
            url "https://cursemaven.com"
            content {
                includeGroup "curse.maven"
            }
        }
        maven { // Fabric ASM for Porting Lib
            url = "https://jitpack.io/"
            content { includeGroupAndSubgroups("com.github") }
        }
        maven { url = "https://maven.bawnorton.com/releases" } // Mixin Squared
        maven { url "https://maven.shedaniel.me/" }
        maven { url = "https://maven.blamejared.com/" } // Hex Casting
        maven { url = "https://mvn.devos.one/releases" } // Porting Lib releases
        maven { url = "https://mvn.devos.one/snapshots" } // Create and several dependencies
        maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
        maven { url = "https://mvn.devos.one/snapshots" } // Registrate
        maven { url = "https://maven.jamieswhiteshirt.com/libs-release" } // Reach Entity Attributes
        maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven" } // Forge Config API Port
        maven {
            name = "Sinytra"
            url = "https://maven.su5ed.dev/releases"
        }
        maven { // Cardinal-Components-API
            name = "Ladysnake Mods"
            url = 'https://maven.ladysnake.org/releases'
        }
        maven { // conditional-mixin (particlecore)
            name = "FallenBreath"
            url = uri("https://maven.fallenbreath.me/releases")
        }
        maven { url = "https://repo.spongepowered.org/repository/maven-public" } // Mixin
        maven { url 'https://maven.wispforest.io' } // owo lib
        maven {
            name = 'Kotlin for Forge'
            url = 'https://thedarkcolour.github.io/KotlinForForge/'
        }
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings(loom.layered {
            it.officialMojangMappings { nameSyntheticMembers = false }
            it.parchment("org.parchmentmc.data:parchment-$minecraft_version:2024.11.17@zip")
        })
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

// Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }

    build.finalizedBy(mergeJars)
    assemble.finalizedBy(mergeJars)
}
